Finished basic react frontend
